--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,7 @@ li{
     text-align: center;
     color: #025157;
     font-weight: 500;
-    font-family: sans-serif;
+    font-family: 'Pangolin', cursive;
 }
 
 .actions{
