--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,14 @@ button{
     height: 45px;
 }
 
+.fixed-header{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: #fffbf7;
+}
+
 li{
     display: inline;
     margin-right: 25px;
@@ -85,6 +93,53 @@ li{
 }
 
 .main{
-    margin-top: 140px;
+    margin-top: 285px;
     text-align: center;
+}
+
+.publish{
+    margin-left: 30px;
+
+}
+
+.publish h3{
+    color:#025157;
+    font-family: 'Pangolin', cursive;
+    font-size 40px;
+    line-height: 48px;
+}
+
+.publish > p{
+    color: #343434;
+    font-size: 16px;
+    line-height: 1.5;
+    margin-bottom: 20px;
+}
+
+.publish > form {
+    display: flex;
+}
+
+.publish > form p{
+    color: #025157;
+    margin-right: 18px;
+}
+
+
+.promo{
+    display: flex;
+    width: 70%;
+    margin: 100px auto;
+    align-items: center;
+}
+
+.explanatory-video{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.explanatory-video img{
+    width: 120px;
+    margin-top: 10px;
 }
