--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ body{
 }
 
 h1{
+    font-size: 60px;
     color: #025157;
     text-align: center;
 }
@@ -56,7 +57,14 @@ li{
 
 .logo > img{
     width: 15%;
+} 
+
+/*.navbar-brand{
+    width: 15%;
 }
+.navbar-brand > img{
+    width: 15%;
+}*/
 
 .navbar{
     width: 70%;
@@ -106,7 +114,7 @@ li{
 .publish h3{
     color:#025157;
     font-family: 'Pangolin', cursive;
-    font-size 40px;
+    font-size: 40px;
     line-height: 48px;
 }
 
@@ -209,4 +217,80 @@ li{
 .features .feature-card .feature-image img {
   margin-top: 0;
   height: 100%;
+}
+
+/** dispositivos moviles en vista viewport vertical*/
+@media (max-width: 575px){
+    .navbar, .actions{
+        display:none;
+    }
+
+    h1{
+        font-size: 30px;
+    }
+
+    .main{
+        margin-top: 150px;
+    }
+
+    .banner > img{
+        width: 100%;
+    }
+
+    .publish > form{
+        flex-direction: column;
+    }
+
+    .publish > form > div{
+        height: 50px;
+        margin-top: 10px;
+    }
+
+    .publish > form > div > input{
+        width: 65%; 
+    }
+
+    .promo{
+        flex-direction: column;
+        max-width: 90%;
+    }
+
+    .explanatory-video > video{
+        width: 100%;
+    }
+
+    .publish{
+        margin-top: 10px;
+    }
+
+    .publish > h3 {
+        font-size: 25px;
+        line-height: 1.2;
+    }
+
+    .features{
+        grid-template: repeat(4, 1fr) / 1fr;
+        padding-left: 0;
+        padding-right: 0;
+    }
+
+    .feature-image{
+        display: none;
+    }
+
+}
+
+/** dispositivos moviles en vista landscape horizontal*/
+@media (min-width: 576px) and (max-width: 767px){
+    
+}
+
+/** dispositivos medianos (tablets)*/
+@media (min-width: 768px) and (max-width: 991px){
+    
+}
+
+/** Dispositivos grandes Desktops*/
+@media (min-width: 992px) and (max-width: 1199px){
+    
 }
