--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ button{
     margin-left: 20px;
     margin-right: 20px;*/ 
     font-size: 0;
-    height: 45px;
+    height: 55px;
 }
 
 .fixed-header{
@@ -49,7 +49,9 @@ li{
     height: 100%;
     vertical-align: middle;
     font-family: sans-serif;
+    width: 90%;
 }
+
 
 .logo{
     width: 15%;
@@ -96,6 +98,10 @@ li{
 .main{
     margin-top: 285px;
     text-align: center;
+}
+
+.banner > img{
+    width: 90%;
 }
 
 .publish{
@@ -165,6 +171,7 @@ li{
     font-family: 'Pangolin', cursive;
     font-size: 40px;
     line-height: 100px;
+    line-height: 1.2;
 }
 
 .logros1 > p{
@@ -183,27 +190,26 @@ li{
     background-color: white;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
-
 }
 
 .logros2 h5{
     color:#025157;
     font-family: 'Pangolin', cursive;
-    font-size: 20px;
-    line-height: 10px;
+    font-size: 30px;
+    line-height: 1;
 }
 
 .logros2 > p{
     color: #343434;
     font-size: 20px;
-    line-height: 1.5;
-    margin-bottom: 20px;
+    line-height: 1.2;
+    margin-bottom: 15px;
 }
 .logros2 > div{
     color: #646262;
     font-size: 16px;
     line-height: 1.5;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
 }
 
 .persona{
@@ -217,7 +223,7 @@ li{
     background-color: #f9da73;
     border-radius: 50%;
     position: absolute;
-    bottom: -1270px;
+    bottom: -1250px;
     right: 200px;
     width: 100px;
     height: 100px;
@@ -290,7 +296,7 @@ li{
 .howitworkscards p{
     color: #343434;
     font-size: 15px;
-    line-height: 1.5;
+    line-height: 1.2;
     margin-bottom: 16px;
     max-width: 60%;
     margin: 0 auto;
@@ -300,8 +306,251 @@ li{
 .howitworkscards a{
     color: #67b54b;
     margin-top: 10px;
-    line-height: 1.4;
+    line-height: 2;
     font-size: 16px;
+}
+
+/** dispositivos moviles en vista viewport vertical*/
+@media (max-width: 575px){
+    .header, .navbar, .actions{
+        display:none;
+    }
+
+    h1{
+        font-size: 30px;
+    }
+
+    .main{
+        margin-top: 150px;
+    }
+
+    .banner > img{
+        width: 100%;
+    }
+
+    .publish > form{
+        flex-direction: column;
+    }
+
+    .publish > form > div{
+        height: 50px;
+        margin-top: 10px;
+    }
+
+    .publish > form > div > input{
+        width: 65%; 
+    }
+
+    .promo{
+        flex-direction: column;
+        max-width: 90%;
+    }
+
+    .explanatory-video > video{
+        width: 100%;
+    }
+
+    .publish{
+        margin-top: 10px;
+    }
+
+    .publish > h3 {
+        font-size: 25px;
+        line-height: 1.2;
+    }
+
+    .features{
+        grid-template: repeat(4, 1fr) / 1fr;
+        padding-left: 0;
+        padding-right: 0;
+    }
+
+    .feature-image{
+        display: none;
+    }
+
+    .logros{
+        flex-direction: column;
+    }
+
+    .logros1{
+        width: 90%;
+    }
+
+    .logros1 h4{
+        font-size: 2em;
+        line-height: 1.2;
+    }
+
+    .logros1 img{
+        width: 100%;
+    }
+
+    .logros2{
+        width: 70%;
+    }
+
+    .persona{
+        max-height: 45vh;
+    }
+
+    .marca{
+        display: none;
+    }
+
+    .howitworksintro h3{
+        font-size: 2em;
+    }
+
+    .howitworkscards{
+        grid-template: repeat(4, 1fr) / repeat(1, 1fr);
+        padding: 5% 10%;
+        margin-top: 5%;
+
+    }
+
+    .howitworkscards article{
+        margin: 10px;
+    }
+
+}
+
+/** dispositivos moviles en vista landscape horizontal*/
+@media (min-width: 576px) and (max-width: 767px){
+    .header{
+        width: 90%;
+        height: auto;
+    }
+
+    .publish > form{
+        flex-direction: column;
+    }
+
+    .publish > form > div{
+        height: 50px;
+        margin-top: 10px;
+    }
+
+    .publish > form > div > input{
+        width: 65%; 
+    }
+
+    .promo{
+        flex-direction: column;
+        max-width: 90%;
+    }
+
+    .explanatory-video > video{
+        width: 100%;
+    }
+
+    .publish{
+        margin-top: 10px;
+    }
+
+    .publish > h3 {
+        font-size: 25px;
+        line-height: 1.2;
+    }
+
+    .logros{
+        flex-direction: column;
+    }
+
+    .logros1{
+        width: 90%;
+    }
+
+    .logros1 h4{
+        font-size: 2em;
+        line-height: 1.2;
+    }
+
+    .logros1 img{
+        width: 100%;
+    }
+
+    .logros2{
+        width: 70%;
+    }
+
+    .persona{
+        max-height: 50vh;
+    }
+    
+    .marca{
+        display: none;
+    }
+
+    .howitworksintro h3{
+        font-size: 2em;
+    }
+
+    .howitworkscards{
+        grid-template: repeat(4, 1fr) / repeat(1, 1fr);
+        padding: 5% 10%;
+        margin-top: 5%;
+
+    }
+
+    .howitworkscards article{
+        margin: 10px;
+    }
+}
+
+/** dispositivos medianos (tablets)*/
+@media (min-width: 768px) and (max-width: 991px){
+    .header{
+        width:  90%;
+        height: auto;
+    }
+
+    .publish > form{
+        flex-direction: column;
+    }
+
+    .publish > form > div{
+        height: 50px;
+        margin-top: 10px;
+    }
+
+    .publish > form > div > input{
+        width: 65%; 
+    }
+
+    .promo{
+        flex-direction: column;
+        max-width: 90%;
+    }
+
+    .explanatory-video > video{
+        width: 100%;
+    }
+
+    .publish{
+        margin-top: 10px;
+    }
+
+    .publish > h3 {
+        font-size: 25px;
+        line-height: 1.2;
+    }
+
+    .marca{
+        display: none;
+    }
+}
+
+/** Dispositivos grandes Desktops*/
+@media (min-width: 992px) and (max-width: 1199px){
+    .header{
+        width: 90%;
+        height: auto;
+    }
+
+    .marca{
+        display: none;
+    }
 }
 
 
