--- a/styles.css
+++ b/styles.css
@@ -98,6 +98,11 @@ li{
     text-align: center;
 }
 
+.texto-boton:hover{
+    background-color: #67b54b;
+
+}
+
 .publish{
     margin-left: 30px;
 
